fix(#644): items emitted in kafka topic didn't have their attribute values (#645)